added commands (ban wip)

--- a/botconfig.json
+++ b/botconfig.json
@@ -1,5 +1,6 @@
-{
-    "token": "token",
-    "clientID": "1017396927731613778",
-    "guildID": "948625193574731797"
+{ 
+"token": "MTAxNzM5NjkyNzczMTYxMzc3OA.G_UcdX.0mX8LjSfaVUznfv-gteGtfTBH9mXO4wtwJVDJ0",
+"clientID": "1017396927731613778",
+"guildID": "948625193574731797",
+"CHANNEL_ID": "1011987221248737443"
 }
