--- a/botconfig.json
+++ b/botconfig.json
@@ -1,5 +1,5 @@
 { 
-"token": "MTAxNzM5NjkyNzczMTYxMzc3OA.G_UcdX.0mX8LjSfaVUznfv-gteGtfTBH9mXO4wtwJVDJ0",
-"clientID": "1017396927731613778",
-"guildID": "948625193574731797",
+"token": "tokenhere",
+"clientID": "application id here",
+"guildID": "server id here",
 }
